# MGNet

./: GETTING_STARTED.md  INSTALL.md  README.md  initialize.sh  linter.sh  requirements.txt  setup.cfg  setup.py
configs/: MGNet-Cityscapes-Fine.yaml  MGNet-Cityscapes-PseudoLabelGeneration.yaml  MGNet-Cityscapes-VideoSequence.yaml  MGNet-KITTI-Eigen-PseudoLabelGeneration.yaml  MGNet-KITTI-Eigen-Zhou.yaml
datasets/: README.md  labels_cityscapes.py  open3d_cityscapes.json  open3d_kitti_eigen.json  prepare_cityscapes.py  prepare_kitti_eigen.py
docker/: Dockerfile  build_docker.sh  develop.Dockerfile  run_docker.sh
mgnet/: __init__.py  config.py
mgnet/data/: __init__.py  cityscapes_scene_seg.py  dataset_mapper.py  kitti_eigen_scene_seg.py  target_generator.py  transform.py
mgnet/evaluation/: __init__.py  depth_evaluation.py  evaluation_visualizer.py  panoptic_evaluation.py  semantic_evaluation.py  tensorboard_image_writer.py
mgnet/geometry/: __init__.py  camera.py  camera_utils.py  depth.py  image.py  pose.py  pose_utils.py
mgnet/inference/: __init__.py  predictor.py  visualizer.py
mgnet/modeling/: __init__.py  layers.py  loss.py  mg_net.py  res_net.py
mgnet/postprocessing/: __init__.py  depth_post_proc.py  exportable_post_proc.py  instance_post_proc.py  panoptic_post_proc.py
mgnet/solver/: __init__.py  build.py
tools/: convert-torchvision-to-mgnet.py  demo.py  generate_pseudo_labels.py  onnx_trt_export.py  train_net.py  visualize_data.py
trt_inference/: CMakeLists.txt  README.md  common.h  main.cpp
